Markdown fixes and allow post edit visibilities

--- a/app/assets/stylesheets/pages/audit_page.scss
+++ b/app/assets/stylesheets/pages/audit_page.scss
@@ -36,17 +36,16 @@
     }
   }
 }
-.show-deleted {
-  ins { display: none; }
+
+.show-changed, .show-deleted, .show-added {
   del {
     background: #FFBBC3;
     text-decoration: none;
   }
-}
-.show-added {
-  del { display: none; }
   ins {
     background: #B3FFC8;
     text-decoration: none;
   }
 }
+.show-deleted ins { display: none; }
+.show-added del { display: none; }
